--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,9 +3,72 @@ title: Atbash
 ---
 
 <header>
-  <h1>Atbash</h1>
+  <div class="wrap">
+    <h1>Atbash</h1>
+    <span>a Co-op product</span>
+  </div>  
 </header>
 
 <section>
-
+  <div class="wrap">
+    <h1>Atbash file encryptor</h1>
+    <h2>Send sensitive documents by email with confidence.</h2>
+  </div>  
 </section>
+
+<section>
+  <div class="wrap">
+    <ul>
+      <li>Atbash reminds you to encrypt your attachments</li>
+      <li>You get a link and a password so only the recipient can open your file</li>
+      <li>Select View-only if you don’t want the recipient to copy your file</li>
+    </ul>
+  </div>  
+</section>
+
+<section>
+  <div class="wrap">
+    If you've ever:
+    <ul>
+      <li>applied for a job</li>
+      <li>bought a house</li>
+      <li>rented a flat</li>
+      <li>had to prove your ID</li>
+      <li>taken out a mortgage</li>
+    </ul>
+    <p>
+      you’ll have been told to send an email with a scan a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway - despite your concerns - so as not to slow things down?
+    </p>
+  </div>  
+</section>
+
+<section>
+  <div class="wrap">
+    <h3>A simple way to safely send</h3>
+    We made Atbash for people:
+    <ul>
+      <li>who care about their privacy</li>
+      <li>who deal with companies that don't care about keeping personal data safe and private</li>
+      <li>who have an important task to do, like getting a new job or buying a house</li>
+    </ul>
+  </div>  
+</section>
+
+<section>
+  <div class="wrap">
+    <h3>Why has the Co-op made a browser extension?</h3>
+    <p>
+      In 1844 a group of people set up The Co-operative Wholesale Society in response to the problems in their community. Back then it was about getting affordable food to people in poverty. 
+    </p>
+    <p>
+      We still live in a world where people don’t have enough to eat, but now we face new problems as well. 173 years later, we’re still helping people help themselves to create a fairer world. 
+    </p>
+  </div>  
+</section>
+
+<footer>
+  <div class="wrap">
+    <span>Atbash is a Co-op project</span>
+    <%= image_tag 'coop.svg' %>
+  </div>
+</footer>
