--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,1 +1,38 @@
 @import 'fonts.css';
+
+body {
+  font-family: 'AvenirNextLTW01-Regular';
+  color: #282828;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'AvenirNextLTW01-Demi';
+  }
+  h1 { font-size: 2em; }
+  h2 { font-size: 1.5em; }
+  h3 { font-size: 1.17em; }
+  h4 { font-size: 1.12em; }
+  h5 { font-size: .83em; }
+  h6 { font-size: .75em; }
+
+  .wrap {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  p {
+    max-width: 600px;
+  }
+
+
+  footer {
+    border-top: 1px solid #282828;
+    margin-top: 4rem;
+    padding: 2rem 0 6rem 0;
+    img {
+      float: right;
+      width: 48px;
+    }
+  }
+
+}
+
