--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -61,7 +61,7 @@ title: Atbash
       <li>taken out a mortgage</li>
     </ul>
     <p>
-      you’ll have been told to send an email with a scan a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway &emdash; despite your concerns &emdash; so as not to slow things down?
+      you’ll have been told to send an email with a scan a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway - despite your concerns - so as not to slow things down?
     </p>
   </div>  
 </section>
