--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,7 @@ title: Atbash
   </div>
 </section>
 
-<section class="features">
+<section>
   <div class="wrap">
     <ul>
       <li>
@@ -51,7 +51,7 @@ title: Atbash
 
 <section>
   <div class="wrap">
-    <h3>What's it good for?</h3>
+    <h3>Take control of your privacy</h3>
     If you've ever:
     <ul>
       <li>applied for a job</li>
@@ -61,7 +61,7 @@ title: Atbash
       <li>taken out a mortgage</li>
     </ul>
     <p>
-      you’ll have been told to send an email with a scan a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway - despite your concerns - so as not to slow things down?
+      you’ll have been told to send an email with a scan of a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway - despite your concerns - so as not to slow things down?
     </p>
   </div>  
 </section>
@@ -72,7 +72,7 @@ title: Atbash
     We made Atbash for people:
     <ul>
       <li>who care about their privacy</li>
-      <li>who deal with companies that don't care about keeping personal data safe and private</li>
+      <li>who deal with companies that might not care about keeping personal data safe</li>
       <li>who have an important task to do, like getting a new job or buying a house</li>
     </ul>
   </div>  
@@ -82,10 +82,10 @@ title: Atbash
   <div class="wrap">
     <h3>Why has the Co-op made a browser extension?</h3>
     <p>
-      In 1844 a group of people set up The Co-operative Wholesale Society in response to the problems in their community. Back then it was about getting affordable food to people in poverty. 
+      In 1844 a group of people set up what was to become <a href="https://www.co-operative.coop/about-us/history" target="_blank">the Co-op</a> in response to the problems in their community. Back then it was about getting affordable food to people in poverty. We still live in a world where people don’t have enough to eat, but now we face new problems as well. 173 years later, <a href="https://www.co-operative.coop/about-us/values" target="_blank">we’re still helping people help themselves to create a fairer world</a>.
     </p>
     <p>
-      We still live in a world where people don’t have enough to eat, but now we face new problems as well. 173 years later, we’re still helping people help themselves to create a fairer world. 
+      We believe people should understand and have control over the technology they use. All too often it feels as though we have no choice but to give up control. We think that just because you need a job or somewhere to live, you shouldn’t have to compromise your privacy and security.  
     </p>
   </div>  
 </section>
