Add atbash icon

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,6 +5,7 @@ title: Atbash
 <header>
   <div class="wrap">
     <div class="logo">
+      <%= image_tag 'atbash.svg' %>
       <span>Atbash</span>
       <span>a Co-op project</span>
     </div>
