Make the words clearer

--- a/source/7118dc90.html.erb
+++ b/source/7118dc90.html.erb
@@ -4,7 +4,7 @@ title: File shared with you
 
 <section>
   <div class="wrap">
-    <h2>A file has been shared with you in confidence</h2>
+    <h2>A confidential file has been shared with you<h2>
   </div>
 </section>
 
