--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,24 @@
 title: Atbash
 ---
 
+<div id="add-to-chrome-prompt">
+  <h2>Add "Atbash"?</h2>
+
+  <img src="images/atbash.svg" alt="Atbash" />
+
+  <p><strong>It can:</strong></p>
+  <ul>
+    <li>Read and change all your data on the websites you visit</li>
+    <li>Display notifications</li>
+    <li>Communicate with cooperating websites</li>
+  </ul>
+
+  <div id="button-bar">
+    <a href="#">Cancel</a>
+    <a href="#">Add extension</a>
+  </div>
+</div>
+
 <header>
   <div class="wrap">
     <div class="logo">
@@ -16,12 +34,12 @@ title: Atbash
   <div class="wrap">
     <h1>Atbash file encryptor</h1>
     <h2>Send sensitive documents by email <br>with confidence</h2>
-  </div>  
+  </div>
 </section>
 
 <section class="cta">
   <div class="wrap">
-    <a href="#"><%= image_tag 'chrome.svg' %> Add to Chrome</a>
+    <a href="#" id='add-to-chrome-button'><%= image_tag 'chrome.svg' %> Add to Chrome</a>
   </div>
 </section>
 
@@ -44,7 +62,7 @@ title: Atbash
         </span>
       </li>
     </ul>
-  </div>  
+  </div>
 </section>
 
 <section>
@@ -61,7 +79,7 @@ title: Atbash
     <p>
       you’ll have been told to send an email with a scan of a passport, driver’s licence or birth certificate. But what happens to that attachment after you’ve sent it? How much did you trust the person or company you sent it to? And have you ever sent an email like this anyway - despite your concerns - so as not to slow things down?
     </p>
-  </div>  
+  </div>
 </section>
 
 <section>
@@ -73,7 +91,7 @@ title: Atbash
       <li>who deal with companies that might not care about keeping personal data safe</li>
       <li>who have an important task to do, like getting a new job or buying a house</li>
     </ul>
-  </div>  
+  </div>
 </section>
 
 <section>
@@ -83,9 +101,9 @@ title: Atbash
       In 1844 a group of people set up what was to become <a href="https://www.co-operative.coop/about-us/history" target="_blank">the Co-op</a> in response to the problems in their community. Back then it was about getting affordable food to people in poverty. We still live in a world where people don’t have enough to eat, but now we face new problems as well. 173 years later, <a href="https://www.co-operative.coop/about-us/values" target="_blank">we’re still helping people help themselves to create a fairer world</a>.
     </p>
     <p>
-      We believe people should understand and have control over the technology they use. All too often it feels as though we have no choice but to give up control. We think that just because you need a job or somewhere to live, you shouldn’t have to compromise your privacy and security.  
+      We believe people should understand and have control over the technology they use. All too often it feels as though we have no choice but to give up control. We think that just because you need a job or somewhere to live, you shouldn’t have to compromise your privacy and security.
     </p>
-  </div>  
+  </div>
 </section>
 
 <footer>
