--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title><%= current_page.data.title || "Atbash" %></title>
     <%= stylesheet_link_tag "site" %>
     <%= stylesheet_link_tag "chrome-prompt" %>
