Add guidance copy to download page

--- a/source/7118dc90.html.erb
+++ b/source/7118dc90.html.erb
@@ -1,6 +1,15 @@
 ---
 title: File shared with you
 ---
+<header>
+  <div class="wrap">
+    <div class="logo">
+      <%= image_tag 'atbash.svg' %>
+      <span>Atbash</span>
+      <span>a Co-op project</span>
+    </div>
+  </div>
+</header>
 
 <section>
   <div class="wrap">
@@ -11,6 +20,16 @@ title: File shared with you
 <section class="cta">
   <div class="wrap">
     <a href="#" id="download-button">Download file</a>
+  </div>
+</section>
+
+<section>
+  <div class="wrap">
+  <p>This file contains personal information about the person who shared it with you.</p>
+  <ul>
+    <li>If you need to keep a copy of this document, save it in a safe place.</li>
+    <li>If you don’t need a copy, delete it as soon as possible.</li>
+  </ul>
   </div>
 </section>
 
